# LNN

./: .gitignore  LNN_SPEC.md  README.md  pyproject.toml
experiments/: _common.py  demo_text_fill.py  demo_text_to_image.py  train_image_classify.py  train_text_classify.py
experiments_block2/: _kei_common.py  e1_path_a_fill.py  e2_multi_area.py  e3_boundary.py  e4_rho_stability.py  e_budget.py  e_cell_scaling.py  e_depth_scaling.py  e_dim_scaling.py  e_extraction.py  e_interior.py  e_orth_variant.py  p1_embed_distribute.py  p2_rp_pulse.py  p3_boundary_v2.py  p4_rho_recheck.py
lnn/: __init__.py  area.py  baselines.py  cluster.py  decoders.py  delay.py  dynamics.py  encodings.py  fields.py  geometry.py  growth.py  instrument.py  readout.py  train.py
lnn_block2/: __init__.py  boundary_split.py  cell_scaling.py  depth_scaling.py  dim_scaling.py  distributed_embedding.py  dynamic_query.py  freq_encoding.py  freq_readout.py  growth2.py  interior_nonlin.py  kei.py  kei_extract.py  multi_area.py  ral.py  readout_bank.py  routing.py  rp_pulse_coupling.py  spectral.py  train2.py
outputs/: D1_text_classify_metrics.json  D2_image_classify_metrics.json  D3_text_fill.txt  D3_text_fill_metrics.json  D4_text_to_image_metrics.json  summary.json
scripts/: run_all.py  run_block2.py  run_budget_grid.py  run_experiment.py  run_experiment2.py  run_experiment3.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py  run_phase7.py  run_spec_ext.py
tests/: test_cell_scaling.py  test_depth_pathdecomp.py  test_dim_split.py  test_extract_regression.py  test_growth.py  (+11 more)
(+30 files in other folders)
